--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                                 </li>
                             </ul>
 
-                            <div class="nav-item">
-                           <a class="nav-link click-scroll" href="team.html">full details</a>
+                            <li class="nav-item">
+  <a class="nav-link" href="team.html">Full Details</a>
                             </li>
     </i>
                                 </a>
@@ -618,6 +618,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
