--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                             </ul>
 
                             <li class="nav-item">
-  <a class="nav-link" href="team.html">Full Details</a>
-                            </li>
+  <a class="nav-link click-scroll" href="team.html">Full Details</a>
+</li>
+
     </i>
                                 </a>
                             </div>
@@ -618,6 +619,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
