--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         <link href="css/vegas.min.css" rel="stylesheet">
 
         <link href="css/tooplate-barista.css" rel="stylesheet">
-        
+         <style>
+      .navbar .nav-link[href="team.html"] {
+        color: white !important;
+        font-weight: 600;
+      }
+      .navbar .nav-link[href="team.html"]:hover {
+        color: #f1c40f !important; /* تقدر تغير اللون */
+      }
     </head>
     
     <body>
@@ -619,6 +626,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
