--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a class="nav-link click-scroll" href="#section_1">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="#section_2">About</a>
+    <a class="nav-link click-scroll" href="#section_2">Our Story</a>
   </li>
   <li class="nav-item">
     <a class="nav-link click-scroll" href="#section_3">Components</a>
@@ -66,11 +66,11 @@
     <a class="nav-link click-scroll" href="#section_5">Contact</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="team.html">Full Details</a>
+    <a class="nav-link click-scroll" href="team.html">team</a>
   </li>
 </ul>
 
-    
+    href="#section_2"
                                 </a>
                             </div>
                         </div>
@@ -92,8 +92,7 @@
                                    Future <em>of</em> Entry.
                                 </p>
 
-                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="#section_2">
-                                    Our Story
+                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="smart door system 3.0.zip">full project
                                 </a>
 
                                 <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>management</strong></a>
@@ -622,6 +621,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
