--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                    Future <em>of</em> Entry.
                                 </p>
 
-                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="smart door system 3.0.zip">full project
+                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="downloads/smart door system 2.0.zip" download>full project
                                 </a>
 
                                 <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>management</strong></a>
@@ -621,6 +621,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
