--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
   </li>
 </ul>
 
-    href="#section_2"
                                 </a>
                             </div>
                         </div>
@@ -92,7 +91,7 @@
                                    Future <em>of</em> Entry.
                                 </p>
 
-                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="downloads/smart door system 2.0.zip" download>full project
+                                <a class="btn custom-btn custom-border-btn smoothscroll me-3" href="downloads/smart door system full project.zip" download>full project
                                 </a>
 
                                 <a  class="btn custom-btn custom-border-btn" data-bs-toggle="modal" data-bs-target="#ideasModal"><strong>management</strong></a>
@@ -621,6 +620,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
