--- a/control.html
+++ b/control.html
@@ -81,8 +81,8 @@
             </button>
             <div id="cameraMenu" class="collapse" data-bs-parent="#sdsOptions">
               <ul class="list-group list-group-flush list-group-dark ms-3">
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start_camera')">start camera</button></li>
-                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop_camera')">stop camera</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('start camera')">start camera</button></li>
+                <li class="list-group-item"><button class="cmd-btn" onclick="sendCommand('stop camera')">stop camera</button></li>
               </ul>
             </div>
           </li>
@@ -220,3 +220,4 @@
   </script>
 </body>
 </html>
+
