--- a/our team/index.html
+++ b/our team/index.html
@@ -18,14 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="vendor/aos/aos.css" rel="stylesheet">
-  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="our team/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="our team/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="our team/vendor/aos/aos.css" rel="stylesheet">
+  <link href="our team/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="our team/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="css/main.css" rel="stylesheet">
+  <link href="our team/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: iPortfolio
@@ -810,19 +810,19 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="php-email-form/validate.js"></script>
-  <script src="vendor/aos/aos.js"></script>
-  <script src="vendor/typed.js/typed.umd.js"></script>
-  <script src="vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="our team/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="our team/php-email-form/validate.js"></script>
+  <script src="our team/vendor/aos/aos.js"></script>
+  <script src="our team/vendor/typed.js/typed.umd.js"></script>
+  <script src="our team/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="our team/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="our team/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="our team/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="our team/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="our team/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="js/main.js"></script>
+  <script src="our team/js/main.js"></script>
 
 </body>
 
