--- a/team.html
+++ b/team.html
@@ -1,67 +1,116 @@
-                <section class="barista-section section-padding section-bg" id="barista-team">
-                    <div class="container">
-                        <div class="row justify-content-center">
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-                            <div class="col-lg-12 col-12 text-center mb-4 pb-lg-2">
-                                <em class="text-white">System Designers</em>
+    <title>Our Team - Smart Door System</title>
 
-                                <h2 class="text-white">Meet People</h2>
-                            </div>
+    <!-- CSS FILES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/vegas.min.css" rel="stylesheet">
+    <link href="css/tooplate-barista.css" rel="stylesheet">
+  </head>
 
-                            <div class="col-lg-3 col-md-6 col-12 mb-4">
-                                <div class="team-block-wrap">
-                                    <div class="team-block-info d-flex flex-column">
-                                        <div class="d-flex flex-column text-center mt-auto mb-3">
-                                            <h4 class="text-white mb-0">abdelraouf</h4>
+  <body>
+    <main>
+      <!-- NAVBAR -->
+      <nav class="navbar navbar-expand-lg">                
+        <div class="container">
+          <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
+            <img src="images/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
+            Smart Door System
+          </a>
 
-                                            <p class="badge ms-1"><em>the Project Designer and Developer</em></p>
-                                        </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                  data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                  aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-                                        <p class="text-white mb-0">I loved Python and that helped me develop the project.</p>
-                                    </div>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-lg-auto">
+              <li class="nav-item"><a class="nav-link" href="index.html#section_1">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_2">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_3">Components</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_4">Versions</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_5">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
-                                    <div class="team-block-image-wrap">
-                                        <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
-                                    </div>
-                                </div>
-                            </div>
+      <!-- TEAM SECTION -->
+      <section class="barista-section section-padding section-bg" id="barista-team">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-12 col-12 text-center mb-4 pb-lg-2">
+              <em class="text-white">System Designers</em>
+              <h2 class="text-white">Meet People</h2>
+            </div>
 
-                            <div class="col-lg-3 col-md-6 col-12 mb-4">
-                                <div class="team-block-wrap">
-                                    <div class="team-block-info d-flex flex-column">
-                                        <div class="d-flex flex-column text-center mt-auto mb-3">
-                                            <h4 class="text-white mb-0">abdulali</h4>
+            <!-- Member 1 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-0">abdelraouf</h4>
+                    <p class="badge ms-1"><em>the Project Designer and Developer</em></p>
+                  </div>
+                  <p class="text-white mb-0">I loved Python and that helped me develop the project.</p>
+                </div>
+                <div class="team-block-image-wrap">
+                  <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
+                </div>
+              </div>
+            </div>
 
-                                            <p class="badge ms-4"><em>the Project Designer</em></p>
-                                        </div>
+            <!-- Member 2 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-0">abdulali</h4>
+                    <p class="badge ms-4"><em>the Project Designer</em></p>
+                  </div>
+                  <p class="text-white mb-0">I loved Python and that helped me designed the project.</p>
+                </div>
+                <div class="team-block-image-wrap">
+                  <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
+                </div>
+              </div>
+            </div>
 
-                                        <p class="text-white mb-0">I loved Python and that helped me designed the project.</p>
-                                    </div>
+            <!-- Member 3 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-0">dr.ahmed</h4>
+                    <p class="badge ms-4"><em>the supervisor</em></p>
+                  </div>
+                  <p class="text-white mb-0">the supervisor of the project.</p>
+                </div>
+                <div class="team-block-image-wrap">
+                  <img src="images/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-                                    <div class="team-block-image-wrap">
-                                        <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-3 col-md-6 col-12 mb-4">
-                                <div class="team-block-wrap">
-                                    <div class="team-block-info d-flex flex-column">
-                                        <div class="d-flex flex-column text-center mt-auto mb-3">
-                                            <h4 class="text-white mb-0">dr.ahmed</h4>
-
-                                            <p class="badge ms-4"><em>the supervisor</em></p>
-                                        </div>
-
-                                        <p class="text-white mb-0">the supervisor of the project.</p>
-                                    </div>
-
-                                    <div class="team-block-image-wrap">
-                                        <img src="images/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
+    <!-- JAVASCRIPT FILES -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/click-scroll.js"></script>
+    <script src="js/vegas.min.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
+</html>
