--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <a class="nav-link click-scroll" href="#section_5">Contact</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link click-scroll" href="our team/index.html">team</a>
+    <a class="nav-link click-scroll" href="team.html">team</a>
   </li>
 </ul>
 
@@ -620,6 +620,7 @@
   // أول ما يفتح المودال يولد سؤال
   document.addEventListener("DOMContentLoaded", generateCaptcha);
 </script>
+
 
 
 
