--- a/team.html
+++ b/team.html
@@ -48,7 +48,9 @@
       <section class="barista-section section-padding section-bg" id="barista-team">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-lg-12 col-12 text-center mb-4 pb-lg-2">
+
+            <!-- العناوين -->
+            <div class="col-lg-12 col-12 text-center mb-5" style="margin-top: 80px;">
               <em class="text-white">System Designers</em>
               <h2 class="text-white">Meet People</h2>
             </div>
@@ -58,10 +60,20 @@
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-0">abdelraouf</h4>
-                    <p class="badge ms-1"><em>the Project Designer and Developer</em></p>
+                    <h4 class="text-white mb-2">abdelraouf</h4>
+                    <p class="bg-warning text-dark px-2 py-1 mx-auto" 
+                       style="border-radius:6px; display:inline-block; font-style:italic;">
+                       the Project Designer and Developer
+                    </p>
                   </div>
-                  <p class="text-white mb-0">I loved Python and that helped me develop the project.</p>
+                  <p class="text-white mb-3">
+                    I loved Python and that helped me develop the project.
+                  </p>
+                  <a href="profile-abdelraouf.html" 
+                     class="btn mt-auto" 
+                     style="background:#000; color:#fff; border-radius:8px;">
+                     Learn More
+                  </a>
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
@@ -74,10 +86,20 @@
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-0">abdulali</h4>
-                    <p class="badge ms-4"><em>the Project Designer</em></p>
+                    <h4 class="text-white mb-2">abdulali</h4>
+                    <p class="bg-warning text-dark px-2 py-1 mx-auto" 
+                       style="border-radius:6px; display:inline-block; font-style:italic;">
+                       the Project Designer
+                    </p>
                   </div>
-                  <p class="text-white mb-0">I loved Python and that helped me designed the project.</p>
+                  <p class="text-white mb-3">
+                    I loved Python and that helped me designed the project.
+                  </p>
+                  <a href="profile-abdulali.html" 
+                     class="btn mt-auto" 
+                     style="background:#000; color:#fff; border-radius:8px;">
+                     Learn More
+                  </a>
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
@@ -90,16 +112,27 @@
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-0">dr.ahmed</h4>
-                    <p class="badge ms-4"><em>the supervisor</em></p>
+                    <h4 class="text-white mb-2">dr.ahmed</h4>
+                    <p class="bg-warning text-dark px-2 py-1 mx-auto" 
+                       style="border-radius:6px; display:inline-block; font-style:italic;">
+                       the supervisor
+                    </p>
                   </div>
-                  <p class="text-white mb-0">the supervisor of the project.</p>
+                  <p class="text-white mb-3">
+                    the supervisor of the project.
+                  </p>
+                  <a href="profile-dr-ahmed.html" 
+                     class="btn mt-auto" 
+                     style="background:#000; color:#fff; border-radius:8px;">
+                     Learn More
+                  </a>
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
             </div>
+
           </div>
         </div>
       </section>
