--- a/team.html
+++ b/team.html
@@ -58,12 +58,12 @@
             <!-- Member 1 -->
             <div class="col-lg-3 col-md-6 col-12 mb-4">
               <div class="team-block-wrap">
-                <div class="team-block-info d-flex flex-column">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
                     <h4 class="text-white mb-2">abdelraouf</h4>
-                    <p class="bg-warning text-dark px-2 py-1 mx-auto" 
-                       style="border-radius:6px; display:inline-block; font-style:italic;">
-                       the Project Designer and Developer
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; margin:auto; font-style:italic;">
+                      the Project Designer and Developer
                     </p>
                   </div>
                   <p class="text-white mb-3">
@@ -84,12 +84,12 @@
             <!-- Member 2 -->
             <div class="col-lg-3 col-md-6 col-12 mb-4">
               <div class="team-block-wrap">
-                <div class="team-block-info d-flex flex-column">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
                     <h4 class="text-white mb-2">abdulali</h4>
-                    <p class="bg-warning text-dark px-2 py-1 mx-auto" 
-                       style="border-radius:6px; display:inline-block; font-style:italic;">
-                       the Project Designer
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; margin:auto; font-style:italic;">
+                      the Project Designer
                     </p>
                   </div>
                   <p class="text-white mb-3">
@@ -110,12 +110,12 @@
             <!-- Member 3 -->
             <div class="col-lg-3 col-md-6 col-12 mb-4">
               <div class="team-block-wrap">
-                <div class="team-block-info d-flex flex-column">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
                     <h4 class="text-white mb-2">dr.ahmed</h4>
-                    <p class="bg-warning text-dark px-2 py-1 mx-auto" 
-                       style="border-radius:6px; display:inline-block; font-style:italic;">
-                       the supervisor
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; margin:auto; font-style:italic;">
+                      the supervisor
                     </p>
                   </div>
                   <p class="text-white mb-3">
