--- a/team.html
+++ b/team.html
@@ -55,25 +55,25 @@
               <h2 class="text-white">Meet People</h2>
             </div>
 
-            <!-- Member 1 -->
-            <div class="col-lg-3 col-md-6 col-12 mb-4">
-              <div class="team-block-wrap">
-                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
-                  <div class="d-flex flex-column text-center mt-auto mb-3">
-                    <h4 class="text-white mb-2">abdelraouf</h4>
-                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
-                              border-radius:6px; display:inline-block; margin:auto; font-style:italic;">
-                      the Project Designer and Developer
-                    </p>
-                  </div>
-                  <p class="text-white mb-3">
-                    I loved Python and that helped me develop the project.
-                  </p>
+            <!-- Member 1 --><div class="col-lg-3 col-md-6 col-12 mb-4">
+                                <div class="team-block-wrap">
+                                    <div class="team-block-info d-flex flex-column">
+                                        <div class="d-flex flex-column text-center mt-auto mb-3">
+                                            <h4 class="text-white mb-0">abdelraouf</h4>
+
+                                            <p class="badge ms-1"><em>the Project Designer and Developer</em></p>
+                                        </div>
+
+                                        <p class="text-white mb-0">I loved Python and that helped me develop the project.</p>
+                                    </div>
+
+                                    <div class="team-block-image-wrap">
+                                        <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
                   <a href="profile-abdelraouf.html" 
                      class="btn mt-auto" 
                      style="background:#000; color:#fff; border-radius:8px;">
                      Learn More
-                  </a>
+    
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
@@ -147,3 +147,4 @@
     <script src="js/custom.js"></script>
   </body>
 </html>
+
