--- a/team.html
+++ b/team.html
@@ -55,82 +55,85 @@
               <h2 class="text-white">Meet People</h2>
             </div>
 
-            <!-- Member 1 --><div class="col-lg-3 col-md-6 col-12 mb-4">
-                                <div class="team-block-wrap">
-                                    <div class="team-block-info d-flex flex-column">
-                                        <div class="d-flex flex-column text-center mt-auto mb-3">
-                                            <h4 class="text-white mb-0">abdelraouf</h4>
-
-                                            <p class="badge ms-1"><em>the Project Designer and Developer</em></p>
-                                        </div>
-
-                                        <p class="text-white mb-0">I loved Python and that helped me develop the project.</p>
-                                    </div>
-
-                                    <div class="team-block-image-wrap">
-                                        <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
-                  <a href="profile-abdelraouf.html" 
-                     class="btn mt-auto" 
-                     style="background:#000; color:#fff; border-radius:8px;">
-                     Learn More
-    
+            <!-- Member 1 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4 text-center">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-2">abdelraouf</h4>
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; font-style:italic;">
+                      the Project Designer and Developer
+                    </p>
+                  </div>
+                  <p class="text-white mb-0">
+                    I loved Python and that helped me develop the project.
+                  </p>
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
+              <!-- زر خارج البوكس -->
+              <a href="profile-abdelraouf.html" 
+                 class="btn mt-3" 
+                 style="background:#000; color:#fff; border-radius:8px;">
+                 Learn More
+              </a>
             </div>
 
             <!-- Member 2 -->
-            <div class="col-lg-3 col-md-6 col-12 mb-4">
+            <div class="col-lg-3 col-md-6 col-12 mb-4 text-center">
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
                     <h4 class="text-white mb-2">abdulali</h4>
                     <p style="background:#ffb84d; color:#000; padding:4px 10px; 
-                              border-radius:6px; display:inline-block; margin:auto; font-style:italic;">
+                              border-radius:6px; display:inline-block; font-style:italic;">
                       the Project Designer
                     </p>
                   </div>
-                  <p class="text-white mb-3">
+                  <p class="text-white mb-0">
                     I loved Python and that helped me designed the project.
                   </p>
-                  <a href="profile-abdulali.html" 
-                     class="btn mt-auto" 
-                     style="background:#000; color:#fff; border-radius:8px;">
-                     Learn More
-                  </a>
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
+              <!-- زر خارج البوكس -->
+              <a href="profile-abdulali.html" 
+                 class="btn mt-3" 
+                 style="background:#000; color:#fff; border-radius:8px;">
+                 Learn More
+              </a>
             </div>
 
             <!-- Member 3 -->
-            <div class="col-lg-3 col-md-6 col-12 mb-4">
+            <div class="col-lg-3 col-md-6 col-12 mb-4 text-center">
               <div class="team-block-wrap">
                 <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
                   <div class="d-flex flex-column text-center mt-auto mb-3">
                     <h4 class="text-white mb-2">dr.ahmed</h4>
                     <p style="background:#ffb84d; color:#000; padding:4px 10px; 
-                              border-radius:6px; display:inline-block; margin:auto; font-style:italic;">
+                              border-radius:6px; display:inline-block; font-style:italic;">
                       the supervisor
                     </p>
                   </div>
-                  <p class="text-white mb-3">
+                  <p class="text-white mb-0">
                     the supervisor of the project.
                   </p>
-                  <a href="profile-dr-ahmed.html" 
-                     class="btn mt-auto" 
-                     style="background:#000; color:#fff; border-radius:8px;">
-                     Learn More
-                  </a>
                 </div>
                 <div class="team-block-image-wrap">
                   <img src="images/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
+              <!-- زر خارج البوكس -->
+              <a href="profile-dr-ahmed.html" 
+                 class="btn mt-3" 
+                 style="background:#000; color:#fff; border-radius:8px;">
+                 Learn More
+              </a>
             </div>
 
           </div>
@@ -147,4 +150,3 @@
     <script src="js/custom.js"></script>
   </body>
 </html>
-
