--- a/our team/index.html
+++ b/our team/index.html
@@ -10,22 +10,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="our team/assets/img/favicon.png" rel="icon">
+  <link href="our team/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="vendor/aos/aos.css" rel="stylesheet">
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="our team/vendor/aos/aos.css" rel="stylesheet">
+  <link href="our team/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="our team/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="our team/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="our team/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="our team/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="our team/css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="our team/assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="profile.html">Your Name</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -183,18 +183,18 @@
   </footer><!-- End Footer -->
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="php-email-form/validate.js"></script>
+  <script src="our team/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="our team/vendor/aos/aos.js"></script>
+  <script src="our team/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="our team/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="our team/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="our team/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="our team/vendor/typed.js/typed.min.js"></script>
+  <script src="our team/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="our team/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="our team/js/main.js"></script>
 
 </body>
                                     </html>
