--- a/our team/index.html
+++ b/our team/index.html
@@ -1,200 +1,152 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>Our Team - Smart Door System</title>
 
-  <title>Profile</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+    <!-- CSS FILES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/vegas.min.css" rel="stylesheet">
+    <link href="css/tooplate-barista.css" rel="stylesheet">
+  </head>
 
-  <!-- Favicons -->
-  <link href="our team/assets/img/favicon.png" rel="icon">
-  <link href="our team/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <body>
+    <main>
+      <!-- NAVBAR -->
+      <nav class="navbar navbar-expand-lg">                
+        <div class="container">
+          <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
+            <img src="images/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
+            Smart Door System
+          </a>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700|Poppins:300,400,500,600,700" rel="stylesheet">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+                  data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
+                  aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-  <!-- Vendor CSS Files -->
-  <link href="our team/vendor/aos/aos.css" rel="stylesheet">
-  <link href="our team/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="our team/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="our team/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="our team/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="our team/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="our team/css/style.css" rel="stylesheet">
-</head>
-
-<body>
-
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
-        <img src="our team/assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="profile.html">Your Name</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-
-      <nav id="navbar" class="nav-menu navbar">
-        <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        </ul>
-      </nav><!-- .nav-menu -->
-    </div>
-  </header><!-- End Header -->
-
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
-      <h1>Your Name</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
-    </div>
-  </section><!-- End Hero -->
-
-  <main id="main">
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>About</h2>
-          <p>Brief description about yourself or your project goes here.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-lg-auto">
+              <li class="nav-item"><a class="nav-link" href="index.html#section_1">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_2">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_3">Components</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_4">Versions</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html#section_5">Contact</a></li>
+            </ul>
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Web Developer &amp; Designer</h3>
-            <p class="fst-italic">
-              Short introduction text here.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 Jan 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
+        </div>
+      </nav>
+
+      <!-- TEAM SECTION -->
+      <section class="barista-section section-padding section-bg" id="barista-team">
+        <div class="container">
+          <div class="row justify-content-center">
+
+            <!-- العناوين -->
+            <div class="col-lg-12 col-12 text-center mb-5" style="margin-top: 80px;">
+              <em class="text-white">System Designers</em>
+              <h2 class="text-white">Meet People</h2>
             </div>
-          </div>
-        </div>
 
-      </div>
-    </section><!-- End About Section -->
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>You can put your contact details and a form here.</p>
-        </div>
-
-        <div class="row mt-1">
-
-          <div class="col-lg-4">
-            <div class="info">
-              <div class="address">
-                <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
-              </div>
-
-              <div class="email">
-                <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div>
-
-              <div class="phone">
-                <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55</p>
-              </div>
-
-            </div>
-          </div>
-
-          <div class="col-lg-8 mt-5 mt-lg-0">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+            <!-- Member 1 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4 text-center">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-2">abdelraouf</h4>
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; font-style:italic;">
+                      the Project Designer and Developer
+                    </p>
+                  </div>
+                  <p class="text-white mb-0">
+                    I loved Python and that helped me develop the project.
+                  </p>
                 </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+                <div class="team-block-image-wrap">
+                  <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+              <!-- زر خارج البوكس -->
+              <a href="profile-abdelraouf.html" 
+                 class="btn mt-3" 
+                 style="background:#000; color:#fff; border-radius:8px;">
+                 Learn More
+              </a>
+            </div>
+
+            <!-- Member 2 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4 text-center">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-2">abdulali</h4>
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; font-style:italic;">
+                      the Project Designer
+                    </p>
+                  </div>
+                  <p class="text-white mb-0">
+                    I loved Python and that helped me designed the project.
+                  </p>
+                </div>
+                <div class="team-block-image-wrap">
+                  <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
+                </div>
               </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              <!-- زر خارج البوكس -->
+              <a href="profile-abdulali.html" 
+                 class="btn mt-3" 
+                 style="background:#000; color:#fff; border-radius:8px;">
+                 Learn More
+              </a>
+            </div>
+
+            <!-- Member 3 -->
+            <div class="col-lg-3 col-md-6 col-12 mb-4 text-center">
+              <div class="team-block-wrap">
+                <div class="team-block-info d-flex flex-column" style="padding-top: 30px;">
+                  <div class="d-flex flex-column text-center mt-auto mb-3">
+                    <h4 class="text-white mb-2">dr.ahmed</h4>
+                    <p style="background:#ffb84d; color:#000; padding:4px 10px; 
+                              border-radius:6px; display:inline-block; font-style:italic;">
+                      the supervisor
+                    </p>
+                  </div>
+                  <p class="text-white mb-0">
+                    the supervisor of the project.
+                  </p>
+                </div>
+                <div class="team-block-image-wrap">
+                  <img src="images/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
+                </div>
               </div>
-              <div class="text-center mt-3"><button type="submit">Send Message</button></div>
-            </form>
+              <!-- زر خارج البوكس -->
+              <a href="profile-dr-ahmed.html" 
+                 class="btn mt-3" 
+                 style="background:#000; color:#fff; border-radius:8px;">
+                 Learn More
+              </a>
+            </div>
+
           </div>
-
         </div>
-      </div>
-    </section><!-- End Contact Section -->
+      </section>
+    </main>
 
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
-      </div>
-      <div class="credits">
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <!-- Vendor JS Files -->
-  <script src="our team/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="our team/vendor/aos/aos.js"></script>
-  <script src="our team/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="our team/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="our team/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="our team/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="our team/vendor/typed.js/typed.min.js"></script>
-  <script src="our team/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="our team/php-email-form/validate.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="our team/js/main.js"></script>
-
-</body>
-                                    </html>
+    <!-- JAVASCRIPT FILES -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/click-scroll.js"></script>
+    <script src="js/vegas.min.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
+</html>
