--- a/our team/index.html
+++ b/our team/index.html
@@ -10,10 +10,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/vegas.min.css" rel="stylesheet">
-    <link href="css/tooplate-barista.css" rel="stylesheet">
+
+    <!-- Bootstrap CSS -->
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap Icons -->
+    <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Extra CSS -->
+    <link href="../css/vegas.min.css" rel="stylesheet">
+    <link href="../css/tooplate-barista.css" rel="stylesheet">
   </head>
 
   <body>
@@ -21,8 +27,8 @@
       <!-- NAVBAR -->
       <nav class="navbar navbar-expand-lg">                
         <div class="container">
-          <a class="navbar-brand d-flex align-items-center me-3" href="index.html">
-            <img src="images/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
+          <a class="navbar-brand d-flex align-items-center me-3" href="../index.html">
+            <img src="../assets/img/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
             Smart Door System
           </a>
 
@@ -34,11 +40,11 @@
 
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-lg-auto">
-              <li class="nav-item"><a class="nav-link" href="index.html#section_1">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="index.html#section_2">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="index.html#section_3">Components</a></li>
-              <li class="nav-item"><a class="nav-link" href="index.html#section_4">Versions</a></li>
-              <li class="nav-item"><a class="nav-link" href="index.html#section_5">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="../index.html#section_1">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="../index.html#section_2">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="../index.html#section_3">Components</a></li>
+              <li class="nav-item"><a class="nav-link" href="../index.html#section_4">Versions</a></li>
+              <li class="nav-item"><a class="nav-link" href="../index.html#section_5">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -71,7 +77,7 @@
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
-                  <img src="images/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
+                  <img src="../assets/img/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
               <!-- زر خارج البوكس -->
@@ -98,7 +104,7 @@
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
-                  <img src="images/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
+                  <img src="../assets/img/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
               <!-- زر خارج البوكس -->
@@ -125,7 +131,7 @@
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
-                  <img src="images/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
+                  <img src="../assets/img/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
               <!-- زر خارج البوكس -->
@@ -142,11 +148,11 @@
     </main>
 
     <!-- JAVASCRIPT FILES -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/click-scroll.js"></script>
-    <script src="js/vegas.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/jquery.sticky.js"></script>
+    <script src="../js/click-scroll.js"></script>
+    <script src="../js/vegas.min.js"></script>
+    <script src="../js/custom.js"></script>
   </body>
 </html>
