--- a/team.html
+++ b/team.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Bootstrap Icons -->
-    <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="../vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Extra CSS -->
-    <link href="css/vegas.min.css" rel="stylesheet">
-    <link href="css/tooplate-barista.css" rel="stylesheet">
+    <link href="../css/vegas.min.css" rel="stylesheet">
+    <link href="../css/tooplate-barista.css" rel="stylesheet">
   </head>
 
   <body>
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-lg">                
         <div class="container">
           <a class="navbar-brand d-flex align-items-center me-3" href="../index.html">
-            <img src="assets/img/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
+            <img src="../assets/img/smart door system.png" class="navbar-brand-image img-fluid" alt="Smart Door System Logo">
             Smart Door System
           </a>
 
@@ -77,7 +77,7 @@
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
-                  <img src="assets/img/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
+                  <img src="../assets/img/team/abdelraouf.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
               <!-- زر خارج البوكس -->
@@ -104,7 +104,7 @@
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
-                  <img src="assets/img/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
+                  <img src="../assets/img/team/abdulali.JPEG" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
               <!-- زر خارج البوكس -->
@@ -131,7 +131,7 @@
                   </p>
                 </div>
                 <div class="team-block-image-wrap">
-                  <img src="assets/img/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
+                  <img src="../assets/img/team/dr.ahmed.jpg" class="team-block-image img-fluid" alt="">
                 </div>
               </div>
               <!-- زر خارج البوكس -->
@@ -148,11 +148,11 @@
     </main>
 
     <!-- JAVASCRIPT FILES -->
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/click-scroll.js"></script>
-    <script src="js/vegas.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/jquery.sticky.js"></script>
+    <script src="../js/click-scroll.js"></script>
+    <script src="../js/vegas.min.js"></script>
+    <script src="../js/custom.js"></script>
   </body>
 </html>
