--- a/our team/profile-abdelraouf.html
+++ b/our team/profile-abdelraouf.html
@@ -26,7 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
-
 </head>
 
 <body>
@@ -39,53 +38,44 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/my-profile-img.jpg" alt="Profile" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Abdelraouf</a></h1>
+        <img src="assets/img/abdelraouf.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="profile-abdelraouf.html">Abdelraouf</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/abdelraouf0mabrouk" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+          <a href="mailto:abdelraouf@example.com" class="email"><i class="bx bx-envelope"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav>
     </div>
-  </header>
-  <!-- End Header -->
+  </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
-      <h1>Abdelraouf</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
-    </div>
-  </section>
-  <!-- End Hero -->
-
+  <!-- ======= Main ======= -->
   <main id="main">
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
+
         <div class="section-title">
           <h2>About</h2>
           <p>I'm the Project Designer and Developer of the Smart Door System. I mainly worked on Python integration and hardware/software design.</p>
         </div>
+
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/abdelraouf.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>System Designer &amp; Developer</h3>
             <p class="fst-italic">
-              Passionate about IoT, AI, and automation.
+              I loved Python and that helped me develop the project. Passionate about IoT, AI, and automation.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -97,9 +87,9 @@
             </div>
           </div>
         </div>
+
       </div>
-    </section>
-    <!-- End About Section -->
+    </section><!-- End About Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -110,8 +100,8 @@
           <p>If you’d like to reach out, here’s how you can contact me:</p>
         </div>
 
-        <div class="row">
-          <div class="col-lg-6">
+        <div class="row mt-1">
+          <div class="col-lg-4">
             <div class="info">
               <div class="email">
                 <i class="bi bi-envelope"></i>
@@ -123,11 +113,9 @@
         </div>
 
       </div>
-    </section>
-    <!-- End Contact Section -->
+    </section><!-- End Contact Section -->
 
-  </main>
-  <!-- End #main -->
+  </main><!-- End #main -->
 
   <!-- Vendor JS Files -->
   <script src="vendor/purecounter/purecounter_vanilla.js"></script>
@@ -136,12 +124,12 @@
   <script src="vendor/glightbox/js/glightbox.min.js"></script>
   <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="vendor/typed.js/typed.min.js"></script>
+  <script src="vendor/typed.js/typed.umd.js"></script>
   <script src="vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="vendor/php-email-form/validate.js"></script>
 
   <!-- Main JS File -->
   <script src="js/main.js"></script>
 
 </body>
-
 </html>
